--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "g": "^2.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "randomstring": "^1.3.0",
+    "tsc": "^2.0.4",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
